[package]
name = "canister_http_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matchit = "0.8.2"
candid = "0.10"
ic-cdk = "0.13"
serde = "1"
serde_bytes = "0.11"
serde_urlencoded = "0.7.1"
serde_json = "1"
url = "2.5.0"